Almost debuggd, Palak 3am